# trail

./: Cargo.toml  trail.rb
src/bash/: git-fixup  git-prior  git-restack
src/crates/trail/: Cargo.toml
src/crates/trail/src/: git.rs  main.rs  skim.rs  with.rs
